@@ -182,9 +182,8 @@ static bool _message_socket_readable(eio_obj_t *obj)
 			debug2("  false");
 		}
 		return false;
-	} else {
-		return true;
 	}
+	return true;
 }
 
 static int _message_socket_accept(eio_obj_t *obj, List objs)
@@ -194,21 +193,20 @@ static int _message_socket_accept(eio_obj_t *obj, List objs)
 
 	int fd;
 	unsigned char *uc;
-	short        port;
-	struct sockaddr_un addr;
+	unsigned short port;
+	struct sockaddr_in addr;
 	slurm_msg_t *msg = NULL;
 	int len = sizeof(addr);
-	
-	debug2("Called _msg_socket_accept");
+
+	debug3("Called _msg_socket_accept");
 
 	while ((fd = accept(obj->fd, (struct sockaddr *)&addr,
 			    (socklen_t *)&len)) < 0) {
 		if (errno == EINTR)
 			continue;
-		
-		if (errno == EAGAIN
-		    || errno == ECONNABORTED
-		    || errno == EWOULDBLOCK) {
+		if (errno == EAGAIN       ||
+		    errno == ECONNABORTED ||
+		    errno == EWOULDBLOCK) {
 			return SLURM_SUCCESS;
 		}
 		error("Error on msg accept socket: %m");
@@ -221,8 +219,8 @@ static int _message_socket_accept(eio_obj_t *obj, List objs)
 
 	/* Should not call slurm_get_addr() because the IP may not be
 	   in /etc/hosts. */
-	uc = (unsigned char *)&((struct sockaddr_in *)&addr)->sin_addr.s_addr;
-	port = ((struct sockaddr_in *)&addr)->sin_port;
+	uc = (unsigned char *)&addr.sin_addr.s_addr;
+	port = addr.sin_port;
 	debug2("allocation got message connection from %u.%u.%u.%u:%hu",
 	       uc[0], uc[1], uc[2], uc[3], ntohs(port));
 	fflush(stdout);
@@ -231,8 +229,6 @@ static int _message_socket_accept(eio_obj_t *obj, List objs)
 	slurm_msg_t_init(msg);
 again:
 	if(slurm_receive_msg(fd, msg, 0) != 0) {
-		printf("error on slurm_recieve_msg\n");
-		fflush(stdout);
 		if (errno == EINTR) {
 			goto again;
 		}
@@ -240,7 +236,7 @@ again:
 		      uc[0],uc[1],uc[2],uc[3]);
 		goto cleanup;
 	}
-	
+
 	_handle_msg(msg_thr, msg); /* handle_msg frees msg->data */
 cleanup:
 	if ((msg->conn_fd >= 0) && slurm_close_accepted_conn(msg->conn_fd) < 0)
